--- a/app/public/test.html
+++ b/app/public/test.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<p>Hello World!</p>
+		<div style="display:flex; align-items:center; justify-content:center; height:100%">
+			<p style="margin-top: 370px; color:rgb(104, 104, 104); font-family: 'Courier New', Courier, monospace;">Webpage displays here</p>
+		</div>
 	</body>
 </html>
